Добавлены иконки для меню и кнопок. Добавлен в gradle ColorPicker. Исправлены fragment_scan и fragment_ledstrip.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,19 @@
 <resources>
     <string name="app_name">LedStrip</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Options</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+    <string name="scan_fragment_label">Devices List</string>
+    <string name="ledstrip_fragment_label">Device Control</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="default_bt_device_name">Unknown Device</string>
+    <string name="default_bt_device_address" translatable="false">00:00:00:00:00:00</string>
+    <string name="paired_bluetooth">Paired Device</string>
+    <string name="unpaired_bluetooth">Unpaired Device</string>
+    <string name="itemScanBtDevices">Scan</string>
+    <string name="itemPairedBtDevices">Paired</string>
+    <string name="itemBtDevicesList">Bluetooth Devices</string>
+    <string name="rbRegimeAll">All</string>
+    <string name="rbRegimeRun">Run</string>
+    <string name="rbRegimeOff">Off</string>
 </resources>
