Исправлена ошибка имени сервиса в Манифесте. Дописан LedstripFragment.kt и ScanFragment.kt

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,4 +15,5 @@
     <string name="rbRegimeAll">Все</string>
     <string name="rbRegimeRun">Бег</string>
     <string name="rbRegimeOff">Выключить</string>
+    <string name="itemEnableLedStrip">Включить</string>
 </resources>
