--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,49 @@
 <resources>
-    <string name="app_name">LedStrip</string>
+    <string name="app_name">testLedStrip</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="default_device_address" translatable="false">00:00:00:00:00:00</string>
+    <string name="default_device_name">Unknown Device</string>
+    <string name="scan_fragment_label">Devices List</string>
+    <string name="splash_fragment_label">Connect to device</string>
+    <string name="settings_fragment_label">Options</string>
+    <string name="container_fragment_label">Control Ledstrip</string>
+    <string name="attachment_summary_off">Off</string>
+    <string name="attachment_summary_on">On</string>
+    <string name="attachment_title">Title</string>
+    <string name="paired_bluetooth">Paired Bluetooth</string>
+    <string name="not_paired_blueooth">Not paired bluetooth</string>
+    <string name="start_scan">Start Scan</string>
+    <string name="stop_scan">Stop Scan</string>
+    <string name="paired_devices">Paired Devices</string>
+    <string name="itemDevicesList">Devices List</string>
+    <string name="switchEnable">On/Off</string>
+    <string name="tvFrequency">Frequency</string>
+    <string name="tvTailSpeed">Speed</string>
+    <string name="tvWaterSpeed">Speed</string>
+    <string name="tvBlinkFrequency">Frequency</string>
+    <string name="tvTitleTag">Tag</string>
+    <string name="tvTitleTail">Tail</string>
+    <string name="tvTitleColor">Color</string>
+    <string name="tvTitleWater">Water</string>
+    <string name="tvTitleBlink">Blink</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tvBrightnessTag">Brightness</string>
+    <string name="tvSpeedTag">Speed</string>
+    <string name="tvWaterBrightness">Brightness</string>
+    <string name="tvTailWidth">Width</string>
+    <!-- TODO: Remove or change this placeholder text -->
 </resources>
