--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,49 +2,38 @@
 <resources>
     <string name="app_name">Светодиодная Лента</string>
     <string name="action_settings">Настройки</string>
+    <string name="messages_header">Сообщение</string>
+    <string name="sync_header">Синк</string>
+    <string name="signature_title">Ваша подпись</string>
+    <string name="reply_title">Ответ</string>
+    <string name="sync_title">Синхронизация</string>
+    <string name="default_device_name">Неизвестное устройство</string>
     <string name="scan_fragment_label">Список устройств</string>
-    <string name="ledstrip_fragment_label">Управление Устройством</string>
-    <string name="next">Дальше</string>
-    <string name="previous">Назад</string>
-    <string name="default_bt_device_name">Неизвестное устройство</string>
-    <string name="paired_bluetooth">Сопряжённое устройство</string>
-    <string name="unpaired_bluetooth">Не сопряжённое устройство</string>
-    <string name="itemScanBtDevices">Сканировать</string>
-    <string name="itemPairedBtDevices">Сопряжённые</string>
-    <string name="itemBtDevicesList">Список Устройств</string>
-    <string name="rbRegimeAll">Все</string>
-    <string name="rbRegimeRun">Бег</string>
-    <string name="rbRegimeOff">Выключить</string>
-    <string name="itemEnableLedStrip">Включить</string>
-    <string name="options_fragment_label">Настройки</string>
-    <string name="itemOptions">Настройки</string>
-    <string name="cbSaveDevice">Сохранять адрес устройства</string>
-    <string name="cbBoundDevice">Сопрягать устройство</string>
-    <string name="messages_header">Сообщения</string>
-    <string name="sync_header">Синхронизировать</string>
-    <string name="signature_title">Ваша сигнатура</string>
-    <string name="reply_title">Ответ по умолчанию</string>
-    <string name="sync_title">Синхронизировать почту</string>
-    <string name="attachment_title">Загружать входящие прикрепы</string>
-    <string name="attachment_summary_on">Автоматически загружать прикрепы</string>
-    <string name="attachment_summary_off">Загружать прикрепы только после запроса</string>
-    <string name="option_binding_on_select">Связать выбранное устройство</string>
-    <string name="option_save_on_select">Сохранить выбранное устройство</string>
-    <string name="option_binding_on_select_summary">Сопрячь выбранное Блютуз устройство, если оно не сопряжено с телефоном</string>
-    <string name="option_save_on_select_summary">Сохранить выбранное Блютуз устройство, если оно не сопряжено с телефоном</string>
-    <string name="rbRegimeTag">Пятнашки</string>
-    <string name="rbRegimeBlink">Мерцать</string>
-    <string name="rbRegimeTail">Хвост</string>
-    <string name="rbRegimeColor">Цвет</string>
-    <string name="swEnable">Вкл./Выкл.</string>
-    <string name="regimeOff">Выключить</string>
-    <string name="regimeAll">Все</string>
-    <string name="regimeTag">Пятнашки</string>
-    <string name="regimeTail">Хвост</string>
-    <string name="regimeWater">Вода</string>
-    <string name="regimeBlink">Мерцать</string>
-    <string name="btnDisable">Выключить</string>
-    <string name="itemBlinker">Мерцание</string>
-    <string name="blinkFrequency">Частота</string>
-    <string name="blinkFill">Заполнение</string>
+    <string name="splash_fragment_label">Подключаемся к устройству</string>
+    <string name="settings_fragment_label">Настройки</string>
+    <string name="container_fragment_label">Управление лентой</string>
+    <string name="attachment_summary_off">Вык</string>
+    <string name="attachment_summary_on">Вкл</string>
+    <string name="attachment_title">Заголовок</string>
+    <string name="paired_bluetooth">Сопряжено</string>
+    <string name="not_paired_blueooth">Не сопряжено</string>
+    <string name="start_scan">Запустить Сканирование</string>
+    <string name="stop_scan">Остановить Сканирование</string>
+    <string name="paired_devices">Сопряжённые устройства</string>
+    <string name="itemDevicesList">Список Устройств</string>
+    <string name="switchEnable">Вкл/Выкл</string>
+    <string name="tvFrequency">Частота</string>
+    <string name="tvTailSpeed">Скорость</string>
+    <string name="tvWaterSpeed">Скорость</string>
+    <string name="tvBlinkFrequency">Частота</string>
+    <string name="tvTitleTag">Пятнашки</string>
+    <string name="tvTitleTail">Бегущая дорожка</string>
+    <string name="tvTitleColor">Цвет</string>
+    <string name="tvTitleWater">Вода</string>
+    <string name="tvTitleBlink">Мерцание</string>
+    <string name="hello_blank_fragment">Привет, пустой фрагмент</string>
+    <string name="tvBrightnessTag">Яркость</string>
+    <string name="tvSpeedTag">Скорость</string>
+    <string name="tvWaterBrightness">Яркость</string>
+    <string name="tvTailWidth">Длина</string>
 </resources>
