--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,8 @@
 <resources>
-    <string name="app_name">LedStrip</string>
-    <string name="action_settings">Options</string>
+    <string name="app_name">testLedStrip</string>
+    <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="scan_fragment_label">Devices List</string>
-    <string name="ledstrip_fragment_label">Device Control</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-    <string name="default_bt_device_name">Unknown Device</string>
-    <string name="default_bt_device_address" translatable="false">00:00:00:00:00:00</string>
-    <string name="paired_bluetooth">Paired Device</string>
-    <string name="unpaired_bluetooth">Unpaired Device</string>
-    <string name="itemScanBtDevices">Scan</string>
-    <string name="itemPairedBtDevices">Paired</string>
-    <string name="itemBtDevicesList">Bluetooth Devices</string>
-    <string name="rbRegimeAll">All</string>
-    <string name="rbRegimeRun">Run</string>
-    <string name="rbRegimeOff">Off</string>
-    <string name="itemEnableLedStrip">Enable Led Strip</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="options_fragment_label">Options</string>
-    <string name="itemOptions">Options</string>
-    <string name="cbSaveDevice">Save BT device address on select</string>
-    <string name="cbBoundDevice">Bound BT device on select</string>
+
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
@@ -32,28 +13,37 @@
 
     <!-- Sync Preferences -->
     <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
-    <string name="option_binding_on_select">Binding device on select</string>
-    <string name="option_save_on_select">Save selected device</string>
-    <string name="option_binding_on_select_summary">Pair the selected Bluetooth device if it is not paired with your phone</string>
-    <string name="option_save_on_select_summary">Save the selected Bluetooth device if it is not paired with your phone</string>
-    <string name="rbRegimeTag">Tags</string>
-    <string name="rbRegimeBlink">Blink</string>
-    <string name="rbRegimeTail">Tail</string>
-    <string name="rbRegimeColor">Color</string>
-    <string name="swEnable">Enable/Disable</string>
-    <string name="regimeOff">Off</string>
-    <string name="regimeAll">All</string>
-    <string name="regimeTag">Tags</string>
-    <string name="regimeTail">Tail</string>
-    <string name="regimeWater">Water</string>
-    <string name="regimeBlink">Blink</string>
-    <string name="btnDisable">Disable</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="itemBlinker">Blink</string>
-    <string name="blinkFrequency">Frequency</string>
-    <string name="blinkFill">Fill</string>
+    <string name="default_device_address" translatable="false">00:00:00:00:00:00</string>
+    <string name="default_device_name">Unknown Device</string>
+    <string name="scan_fragment_label">Devices List</string>
+    <string name="splash_fragment_label">Connect to device</string>
+    <string name="settings_fragment_label">Options</string>
+    <string name="container_fragment_label">Control Ledstrip</string>
+    <string name="attachment_summary_off">Off</string>
+    <string name="attachment_summary_on">On</string>
+    <string name="attachment_title">Title</string>
+    <string name="paired_bluetooth">Paired Bluetooth</string>
+    <string name="not_paired_blueooth">Not paired bluetooth</string>
+    <string name="start_scan">Start Scan</string>
+    <string name="stop_scan">Stop Scan</string>
+    <string name="paired_devices">Paired Devices</string>
+    <string name="itemDevicesList">Devices List</string>
+    <string name="switchEnable">On/Off</string>
+    <string name="tvFrequency">Frequency</string>
+    <string name="tvTailSpeed">Speed</string>
+    <string name="tvWaterSpeed">Speed</string>
+    <string name="tvBlinkFrequency">Frequency</string>
+    <string name="tvTitleTag">Tag</string>
+    <string name="tvTitleTail">Tail</string>
+    <string name="tvTitleColor">Color</string>
+    <string name="tvTitleWater">Water</string>
+    <string name="tvTitleBlink">Blink</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tvBrightnessTag">Brightness</string>
+    <string name="tvSpeedTag">Speed</string>
+    <string name="tvWaterBrightness">Brightness</string>
+    <string name="tvTailWidth">Width</string>
+    <!-- TODO: Remove or change this placeholder text -->
 </resources>
